added usecase checkApplication
